<resources>
    <string name="app_name">Covid19App</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_global_summary">GlobalSummaryActivity</string>
    <string name="covid_19">COVID-19</string>
    <string name="latest_stats">LATEST STATS</string>
    <string name="stats_summary">STATS SUMMARY</string>
    <string name="country">Country</string>
    <string name="confirmed">Confirmed</string>
    <string name="_89323">89323</string>
    <string name="_33">+33</string>
    <string name="_897">897</string>
    <string name="recovered">Recovered</string>
    <string name="_88">+88</string>
    <string name="deaths">Deaths</string>
    <string name="_899878">899878</string>
    <string name="_3">+3</string>
    <string name="todo2">TODO</string>
    <string name="textview">TextView</string>
    <string name="_2129414">2129414</string>
    <string name="_3332">3332</string>
    <string name="todo">TODO</string>
    <string name="global_stats">Global Stats</string>
    <string name="covid_192">COVID-19</string>
    <string name="_9438934">9438934</string>
    <string name="total_confirmed">Total confirmed</string>
    <string name="_98797">98797</string>
    <string name="new_confirmed">New confirmed</string>
    <string name="total_deaths">Total deaths</string>
    <string name="_334445">334445</string>
    <string name="new_deaths">New deaths</string>
    <string name="_8876">8876</string>
    <string name="total_recovered">Total recovered</string>
    <string name="_8484848">8484848</string>
    <string name="new_recovered">New recovered</string>
    <string name="_938945">938945</string>
</resources>