<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_country_flag"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/sfprodisplay_semibold"
            android:text="@string/textview"
            android:textColor="@color/mainBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_country_flag"
            app:layout_constraintStart_toEndOf="@+id/imageView_country_flag"
            app:layout_constraintTop_toTopOf="@+id/imageView_country_flag" />

        <TextView
            android:id="@+id/textView_total_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sfprotext_semibold"
            android:text="@string/_2129414"
            android:textColor="@color/mainBlack"
            app:layout_constraintBottom_toBottomOf="@+id/textView_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_country" />

        <TextView
            android:id="@+id/textView_new_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/sfprotext_bold"
            android:text="@string/_3332"
            android:textColor="#F44336"
            app:layout_constraintBottom_toBottomOf="@+id/textView_total_confirmed"
            app:layout_constraintEnd_toStartOf="@+id/textView_total_confirmed"
            app:layout_constraintTop_toTopOf="@+id/textView_total_confirmed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>